fix css issue that had gap below game img in profile page

--- a/games/static/css/profile.css
+++ b/games/static/css/profile.css
@@ -85,7 +85,6 @@ div.game_price {
     background-color: rgb(8, 15, 37);
     color: white;
     vertical-align: top;
-    float: right;
     margin-right: 10px;
 }
 
